checkbox alignment issue fixed

--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -172,7 +172,7 @@ span.MuiTouchRipple-root {
 }
 .MuiCheckbox-root , .MuiRadio-root{
   color: rgba(0, 0, 0, 0.6) !important;
-  padding: 9px 0px 9px !important;
+  padding: 9px 9px 9px 0px !important;
 }
 .common-checkbox svg.MuiSvgIcon-root{
   background-image: url('../images/Check.svg');
